# duxcore

./: .deployment.json  .eslintignore  .gitignore  .prettierignore  CODEOWNER  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE.md  README.md  commitlint.config.js  docker-compose.yml  dump.rdb  ormconfig.json  package.json
.docker/: .gitignore
.docker/core/: README.md  docker-compose.yml  (+1 more)
.github/: labeler.yml
api/: package.json
assets/: README.md
backend/: .env.example  .eslintrc  .eslintrc.json  Dockerfile  README.md  docker-compose.yml  duxcore.ts  ormconfig.json  package.json  tsconfig.json
core/: .db-deployment.json  .deployment.json  .env.example  .gitignore  .master-deployment.json  Dockerfile  README.md  docker-compose.yml  nginx.conf  package-lock.json  package.json  tsconfig.json
daemon/: .gitignore  Cargo.toml  README.md  attach-example.js
daemon/docs/: attach-example.js  ftp.md  http.md  stats-example.js  ws.md
daemon/src/: api.rs  client.rs  corekey.rs  main.rs  util.rs  websocket.rs
daemon/src/api/: docker_container.rs  docker_create.rs  docker_image.rs  error.rs  mod.rs  service.rs
daemon/src/ftp/: auth.rs  mod.rs  storage.rs  user.rs
dashboard/: .env.development.example  .eslintrc.json  .gitignore  next.config.js  package.json  tailwind.config.js
frontend/: .eslintrc.json  .prettierrc.js  Dockerfile  docker-compose.yml  next.config.js  package.json  tailwind.config.js
website/: .deployment.json  .env.local.example  .eslintignore  Dockerfile  docker-compose.yml  next.config.js  package.json  tailwind.config.js
wrapper/: .eslintrc.json  README.md  package.json  tsconfig.json
(+313 files in other folders)
