[package]
name = "duxcore-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-util = { version = "0", features = ["io"] }
tokio = { version = "1", features = ["macros", "fs", "net"] }
serde = "1"
bytes = "1"
futures = "0"
base64 = "0"
thiserror = "1"
serde_json = "1"
log = "0"
rand = "0"
async-trait = "0"

rocket = { version = "0.5.0-rc.1", features = ["json"] }
hyper = "0"
hyper-tls = "0"
follow-redirects = { git = "https://github.com/stevenroose/rust-follow-redirects", branch = "update-deps" }

tokio-tungstenite = "0"
tungstenite = "0"

libunftp = "0"

bollard = "0"

async-compression = { version = "0", features = ["tokio", "gzip"] }
tokio-tar = "0"
